--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-headroom": "^3.2.3",
+    "@types/react-router": "^5.1.20",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
+    "react-router": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
