--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@types/react-headroom": "^3.2.3",
     "@types/react-router": "^5.1.20",
+    "@types/styled-jsx": "^3.4.4",
     "firebase": "^10.7.0",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-router": "^6.20.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
