--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/react-headroom": "^3.2.3",
     "@types/react-router": "^5.1.20",
-    "firebase": "^10.7.0",
+    "dotenv": "^16.3.1",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
