--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         node-version: '20' # Set this to the node version you are using
     - run: npm install
-    - run: npm run dev
+    - run: npm run build
     - uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting
