--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "email": "email dev --dir src/components/Email"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-email/components": "0.0.15",
     "@types/react-headroom": "^3.2.3",
     "@types/react-router": "^5.1.20",
     "@types/styled-jsx": "^3.4.4",
@@ -22,6 +24,7 @@
     "marked": "^11.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-email": "2.1.0",
     "react-headroom": "^3.2.1",
     "react-icons": "^4.12.0",
     "react-router": "^6.20.1",
