--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "on-the-pulse",
   "private": true,
   "version": "0.0.0",
+  "main": "server/server.js",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "email": "email dev --dir src/components/Email"
+    "email": "email dev --dir src/components/Email",
+    "start": "node on-the-pulse",
+    "server:start": "nodemon on-the-pulse"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -18,7 +21,10 @@
     "@types/react-headroom": "^3.2.3",
     "@types/react-router": "^5.1.20",
     "@types/styled-jsx": "^3.4.4",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.16",
     "marked": "^11.1.1",
@@ -29,6 +35,7 @@
     "react-icons": "^4.12.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.21.1",
+    "resend": "^3.2.0",
     "styled-jsx": "^5.1.2"
   },
   "devDependencies": {
@@ -41,6 +48,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "nodemon": "^3.1.0",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
