--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@types/react-headroom": "^3.2.3",
     "@types/react-router": "^5.1.20",
     "@types/styled-jsx": "^3.4.4",
-    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -36,7 +35,8 @@
     "react-router": "^6.20.1",
     "react-router-dom": "^6.21.1",
     "resend": "^3.2.0",
-    "styled-jsx": "^5.1.2"
+    "styled-jsx": "^5.1.2",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
