--- a/functions/package.json
+++ b/functions/package.json
@@ -18,9 +18,10 @@
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "firebase-admin": "^11.8.0",
-    "firebase-functions": "^4.3.1"
+    "firebase-functions": "^4.7.0"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
