--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-icons": "^4.12.0",
     "react-router": "^6.20.1",
     "react-router-dom": "^6.21.1",
+    "react-slick": "^0.30.2",
     "resend": "^3.2.0",
+    "slick-carousel": "^1.8.1",
     "styled-jsx": "^5.1.2",
     "tsx": "^4.7.1"
   },
